Refactor: Modify the import and colletor class to toList method, Add three of the game result in game domain.